Task 4: Update Query for Tasks Done

--- a/AndroidProject/app/src/main/res/values/strings.xml
+++ b/AndroidProject/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="admob_app_id">ca-app-pub-5510176989515053~3520917855</string>
     <string name="admob_unit_id">ca-app-pub-5510176989515053/6414674502</string>
+    <string name="update_activity_button_text_update">Update</string>
 </resources>
