--- a/AndroidProject/app/src/main/res/values/strings.xml
+++ b/AndroidProject/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="is_first_time_install">first_time</string>
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
+    <string name="update_activity_delete_task_btn">Delete</string>
 
 
 </resources>
