Task 7: Completed Tasks Functionality improved. Shown only if present. Bug still left. Bug:LiveData Setup and changes to be seperated

--- a/AndroidProject/app/src/main/res/values/strings.xml
+++ b/AndroidProject/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
     <string name="update_activity_delete_task_btn">Delete</string>
+    <string name="completed_tasks_label">Completed tasks</string>
 
 
 </resources>
