--- a/AndroidProject/app/src/main/res/values/strings.xml
+++ b/AndroidProject/app/src/main/res/values/strings.xml
@@ -10,12 +10,15 @@
     <string name="current_list">current_list</string>
     <string name="current_task">current_task</string>
     <string name="current_user">current_user</string>
+    <string name="current_score">CurrentScore</string>
 
     <string name="is_first_time_install">first_time</string>
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
     <string name="update_activity_delete_task_btn">Delete</string>
     <string name="completed_tasks_label">Completed tasks</string>
+
+    <string name="menu_points_label">Your Points</string>
 
 
 </resources>
