--- a/AndroidProject/loginlib/src/main/res/values/strings.xml
+++ b/AndroidProject/loginlib/src/main/res/values/strings.xml
@@ -1,18 +1,13 @@
 <resources>
     <string name="app_name">LoginLib</string>
     <string name="title_activity_login">Sign in</string>
-    <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+
     <string name="login_activity_sign_up_button_text">Sign Up</string>
     <string name="current_user">current_user</string>
+
+
+    <string name="login_title">Please Login</string>
+    <string name="login_desc">You get 3 lists without login. That means straight
+        to productivity But to make more lists, please login.
+        And if you have come this far, and you like the app, please rate it on the play store :) </string>
 </resources>
