--- a/AndroidProject/loginlib/src/main/res/values/strings.xml
+++ b/AndroidProject/loginlib/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="current_user">current_user</string>
 
 
-    <string name="login_title">Please Login</string>
+    <string name="login_title">Login and Back to Productivity</string>
     <string name="login_desc">You get 3 lists without login. That means straight
         to productivity But to make more lists, please login.
         And if you have come this far, and you like the app, please rate it on the play store :) </string>
