--- a/AndroidProject/app/src/main/res/values/strings.xml
+++ b/AndroidProject/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="menu_update_list_label">Update this List</string>
     <string name="new_task_hint">Create a task</string>
     <string name="save_button_label">Save</string>
+    <string name="your_lists_label">Your Lists</string>
 
 
 </resources>
